[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemsembler"
version = "0.11.13"
description = "A tool for assembling and comparing several types of Genome-Scale Metabolic Models."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Elena Matveishina", email = "elena.matveishina@embl.de" },
    { name = "Bartosz Bartmanski", email = "bartosz.bartmanski@embl.de" }
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["genome scale metabolic models", "metabolism", "biology"]
requires-python = ">=3.9"
dependencies = [
    "cobra",
    "metquest",
    "dill",
    "ncbi-genome-download",
    "numpy",
    "scipy",
    "networkx",
    "pandas>=2.1",
    "pyarrow",
    "seaborn",
    "pyvis",
    "h5py",
    "platformdirs",
    "pyyaml"
]

[project.scripts]
gemsembler = "gemsembler.__main__:main"

[project.urls]
"Homepage" = "https://git.embl.de/grp-zimmermann-kogadeeva/GEMsembler"
"Bug tracker" = "https://git.embl.de/grp-zimmermann-kogadeeva/GEMsembler/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.bumpver]
current_version = "0.11.13"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/gemsembler/__init__.py" = ['^__version__ = "{version}"$']
"docs/conf.py" = ['^release = "{version}"$']

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = [
    "ignore::UserWarning"
]

[tool.uv.sources]
gemsembler = { workspace = true }

[dependency-groups]
dev = [
    "gemsembler",
    "nbsphinx>=0.9.7",
    "sphinx>=7.4.7",
    "sphinx-autoapi>=3.6.0",
]
testing = [
    "jupyterlab>=4.3.5",
]
